--- a/src/fxmls/GUI009AMTH.fxml
+++ b/src/fxmls/GUI009AMTH.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI009Controller">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI009Controller">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -25,7 +24,8 @@
          <children>
             <TextField fx:id="txtFPhone" layoutX="26.0" layoutY="37.0" />
             <Label layoutX="26.0" layoutY="19.0" text="Phone number:" />
-            <Button fx:id="btnAccept" layoutX="147.0" layoutY="73.0" mnemonicParsing="false" text="Accept" />
+            <Button fx:id="btnAccept" layoutX="149.0" layoutY="74.0" mnemonicParsing="false" text="Accept" />
+            <Button fx:id="btnCancel" layoutX="89.0" layoutY="74.0" mnemonicParsing="false" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
