--- a/src/fxmls/GUI005CRUDF.fxml
+++ b/src/fxmls/GUI005CRUDF.fxml
@@ -23,8 +23,7 @@
          <right>
             <AnchorPane prefWidth="157.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="btnMakeDirectory" layoutX="17.0" layoutY="45.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Make directory" AnchorPane.rightAnchor="30.0" />
-                  <Button fx:id="btnDelete" disable="true" layoutX="17.0" layoutY="80.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Delete" AnchorPane.rightAnchor="30.0" />
+                  <Button fx:id="btnDelete" disable="true" layoutX="17.0" layoutY="44.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Delete" AnchorPane.rightAnchor="30.0" />
                   <Button fx:id="btnDownload" disable="true" layoutX="17.0" layoutY="10.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Download file" AnchorPane.rightAnchor="30.0" />
                </children>
             </AnchorPane>
@@ -35,6 +34,8 @@
                   <TextField fx:id="txtFSearch" disable="true" editable="false" layoutX="25.0" layoutY="20.0" prefHeight="25.0" prefWidth="473.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="157.0" />
                   <Button fx:id="btnSearch" layoutX="510.0" layoutY="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Search file" AnchorPane.rightAnchor="30.0" />
                   <Button fx:id="btnLoad" disable="true" layoutX="510.0" layoutY="55.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Load file" AnchorPane.rightAnchor="30.0" />
+                  <TextField fx:id="txtFNameDirectory" layoutX="10.0" layoutY="50.0" prefHeight="25.0" prefWidth="208.0" promptText="Write the name of the directory..." />
+                  <Button fx:id="btnMakeDirectory" layoutX="231.0" layoutY="50.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Make directory" AnchorPane.rightAnchor="683.0" />
                </children>
             </AnchorPane>
          </top>
