--- a/src/fxmls/GUI003SDI.fxml
+++ b/src/fxmls/GUI003SDI.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -47,11 +46,7 @@
                   <AnchorPane VBox.vgrow="NEVER">
                      <children>
                         <Label fx:id="lblTitle" layoutX="14.0" layoutY="22.0" text="Title:" AnchorPane.topAnchor="22.0" />
-                        <TextField fx:id="txtFTitle" layoutX="50.0" layoutY="18.0" prefHeight="25.0" prefWidth="248.0" AnchorPane.topAnchor="20.0" />
-                        <Label fx:id="lblType" layoutX="336.0" layoutY="22.0" text="Type:" AnchorPane.topAnchor="22.0" />
-                        <ChoiceBox fx:id="chcType" layoutX="375.0" layoutY="18.0" prefWidth="150.0" AnchorPane.topAnchor="20.0" />
-                        <Label fx:id="lblEstate" layoutX="568.0" layoutY="22.0" text="Estate:" AnchorPane.topAnchor="22.0" />
-                        <ChoiceBox fx:id="chcEstate" layoutX="613.0" layoutY="18.0" prefWidth="150.0" AnchorPane.topAnchor="20.0" />
+                        <TextField fx:id="txtFTitle" layoutX="50.0" layoutY="18.0" prefHeight="25.0" prefWidth="657.0" AnchorPane.topAnchor="20.0" />
                      </children>
                      <VBox.margin>
                         <Insets />
@@ -59,21 +54,27 @@
                   </AnchorPane>
                   <AnchorPane VBox.vgrow="ALWAYS">
                      <children>
-                        <TableView fx:id="tableView" layoutX="14.0" layoutY="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+                        <TableView fx:id="tbIncidents" layoutX="14.0" layoutY="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                            <columns>
                               <TableColumn fx:id="tCTitle" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Title" />
                               <TableColumn fx:id="tCDescription" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Description" />
                               <TableColumn fx:id="tCLocation" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Location" />
                               <TableColumn fx:id="tCType" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Type" />
-                              <TableColumn fx:id="tCEstate" maxWidth="145.0" minWidth="97.0" prefWidth="97.0" text="Estate" />
-                              <TableColumn fx:id="tCSignatures" minWidth="180.0" prefWidth="59.0" text="Number of Signatures" />
+                              <TableColumn fx:id="tCEstate" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" text="Estate" />
+                              <TableColumn fx:id="tCSignatures" maxWidth="-1.0" minWidth="111.0" prefWidth="-1.0" text="Number of Signatures" />
                            </columns>
                         </TableView>
                      </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
                   </AnchorPane>
                </children>
             </VBox>
-            <VBox prefHeight="551.0" prefWidth="140.0">
+            <VBox>
                <children>
                   <Button fx:id="btnFilter" mnemonicParsing="false" prefWidth="120.0" text="Filter">
                      <VBox.margin>
@@ -101,6 +102,9 @@
                      </VBox.margin>
                   </Button>
                </children>
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
             </VBox>
          </children>
       </HBox>
