24/01 Clase. Camnbios varios.

--- a/src/fxmls/GUI006MD.fxml
+++ b/src/fxmls/GUI006MD.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI006Controller.java">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI006Controller">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -73,7 +73,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="tfStreet" editable="false">
+                  <TextField fx:id="tfStreet">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin>
