--- a/src/fxmls/GUI006MD.fxml
+++ b/src/fxmls/GUI006MD.fxml
@@ -1,101 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.BorderPane?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI006Controller">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu fx:id="mIncident" mnemonicParsing="false" text="Incident" />
-            <Menu fx:id="mTownhall" mnemonicParsing="false" text="Townhalls">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-              </items>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI006Controller">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu fx:id="mIncident" mnemonicParsing="false" text="Incident" />
+          <Menu fx:id="mTownhall" mnemonicParsing="false" text="Townhalls" />
+            <Menu fx:id="mFile" mnemonicParsing="false" text="File" />
+            <Menu fx:id="mUserInformation" mnemonicParsing="false" text="User Information" />
+            <Menu fx:id="mLogOut" mnemonicParsing="false" text="Log Out">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+               </items>
             </Menu>
-        <Menu fx:id="mFile" mnemonicParsing="false" text="File" />
-        <Menu fx:id="mUserInformation" mnemonicParsing="false" text="User Information" />
-            <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut" />
-      </menus>
-    </MenuBar>
-      <HBox prefHeight="386.0" prefWidth="640.0">
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-            <VBox prefHeight="268.0" prefWidth="289.0">
-               <children>
-                  <Label text="Fullname:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField fx:id="tfFullName">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Username:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField fx:id="tfUsername">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Password:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <PasswordField fx:id="pfPassword" promptText="Introduce a NEW password" />
-                  <Label text="Email:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField fx:id="tfEmail">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label fx:id="mLocation" text="Street:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField fx:id="tfStreet">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Townhall:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField fx:id="tfTownhall">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" />
-               </children>
-            </VBox>
-            <AnchorPane prefHeight="178.0" prefWidth="201.0">
-               <children>
-                  <Button fx:id="btnUpdate" layoutX="115.0" layoutY="321.0" mnemonicParsing="false" text="Update" />
-               </children></AnchorPane>
+            <Label layoutX="375.0" layoutY="75.0" text="Fullname" />
+            <Label layoutX="375.0" layoutY="233.0" text="Email" />
+            <Label layoutX="374.0" layoutY="177.0" text="Password" />
+            <Label layoutX="375.0" layoutY="128.0" text="Username" />
+            <Label layoutX="375.0" layoutY="348.0" text="Townhall" />
+            <TextField fx:id="tfFullName" layoutX="375.0" layoutY="92.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfEmail" layoutX="375.0" layoutY="254.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfUsername" layoutX="375.0" layoutY="145.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="pfPassword" layoutX="375.0" layoutY="198.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfStreet" layoutX="375.0" layoutY="311.0" prefHeight="25.0" prefWidth="220.0" />
+            <Label layoutX="374.0" layoutY="293.0" text="Street" />
+            <Button fx:id="btnUpdate" layoutX="708.0" layoutY="379.0" mnemonicParsing="false" text="Update" />
+            <ChoiceBox fx:id="chBTownhall" layoutX="375.0" layoutY="367.0" prefHeight="25.0" prefWidth="220.0" />
          </children>
-      </HBox>
-  </children>
-</VBox>
+      </AnchorPane>
+   </center>
+</BorderPane>
