--- a/src/fxmls/GUI005CRUDF.fxml
+++ b/src/fxmls/GUI005CRUDF.fxml
@@ -3,22 +3,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox minHeight="574.0" minWidth="1024.0" prefHeight="574.0" prefWidth="1024.0" 
-      xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" 
-      fx:controller="controllers.GUI005Controller">
+<VBox minHeight="574.0" minWidth="1024.0" prefHeight="574.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI005Controller">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
-        <Menu fx:id="mIncidents" mnemonicParsing="false" text="Incidents" />
-        <Menu fx:id="mFiles" mnemonicParsing="false" text="Files" />
-        <Menu fx:id="mUserInfo" mnemonicParsing="false" text="User Information" />
-        <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut" />
+        <Menu fx:id="mIncidents" mnemonicParsing="false" text="Incidents">
+               <items>
+                  <MenuItem fx:id="mIIncidentList" mnemonicParsing="false" text="IncidentList" />
+               </items></Menu>
+        <Menu fx:id="mFiles" mnemonicParsing="false" text="Files">
+               <items>
+                  <MenuItem fx:id="mIFTP" mnemonicParsing="false" text="FTP" />
+               </items></Menu>
+        <Menu fx:id="mUserInfo" mnemonicParsing="false" text="User Information">
+               <items>
+                  <MenuItem fx:id="mISetting" mnemonicParsing="false" text="Settings" />
+               </items></Menu>
+        <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut">
+               <items>
+                  <MenuItem fx:id="mILogOut" mnemonicParsing="false" text="LogOut" />
+               </items></Menu>
       </menus>
     </MenuBar>
       <BorderPane prefHeight="552.0" prefWidth="1024.0" VBox.vgrow="ALWAYS">
