--- a/src/fxmls/GUI004SAMI.fxml
+++ b/src/fxmls/GUI004SAMI.fxml
@@ -33,18 +33,18 @@
                   <ImageView fx:id="iVPhoto" fitHeight="225.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" />
                </graphic>
             </Button>
-            <Label fx:id="lblStreet" layoutX="10.0" layoutY="381.0" text="Street:" AnchorPane.leftAnchor="12.0" />
-            <TextField fx:id="txtFStreet" layoutX="10.0" layoutY="403.0" prefHeight="25.0" prefWidth="300.0" promptText="Example: Street" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-            <Label fx:id="lblLocality" layoutX="10.0" layoutY="438.0" text="Locality:" />
-            <TextField fx:id="txtFLocality" layoutX="10.0" layoutY="460.0" prefHeight="25.0" prefWidth="316.0" promptText="Example: Locality" />
+            <Label fx:id="lblStreet" layoutX="10.0" layoutY="435.0" text="Street:" AnchorPane.leftAnchor="12.0" />
+            <TextField fx:id="txtFStreet" layoutX="10.0" layoutY="457.0" prefHeight="25.0" prefWidth="300.0" promptText="Example: Street" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+            <Label fx:id="lblLocality" layoutX="10.0" layoutY="375.0" text="Locality:" />
             <Label fx:id="lblType" layoutX="10.0" layoutY="310.0" text="Type:" AnchorPane.leftAnchor="14.0" />
             <ComboBox fx:id="chcType" layoutX="10.0" layoutY="332.0" prefHeight="25.0" prefWidth="150.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="172.0" />
             <Label fx:id="lblEstate" layoutX="176.0" layoutY="310.0" text="Estate:" AnchorPane.leftAnchor="176.0" />
             <ComboBox fx:id="chcEstate" layoutX="176.0" layoutY="332.0" prefHeight="25.0" prefWidth="150.0" AnchorPane.leftAnchor="176.0" AnchorPane.rightAnchor="10.0" />
-            <Button fx:id="btnAccept" layoutX="201.0" layoutY="503.0" mnemonicParsing="false" text="Accept" AnchorPane.leftAnchor="201.0" />
-            <Button fx:id="btnCancel" layoutX="274.0" layoutY="503.0" mnemonicParsing="false" text="Cancel" AnchorPane.leftAnchor="274.0" />
-            <Button fx:id="btnSignature" layoutX="55.0" layoutY="503.0" mnemonicParsing="false" prefWidth="53.0" text="Sign it" />
-            <Label fx:id="lblSignature" alignment="CENTER_RIGHT" layoutX="11.0" layoutY="507.0" prefHeight="17.0" prefWidth="29.0" text="0" />
+            <Button fx:id="btnAccept" layoutX="200.0" layoutY="515.0" mnemonicParsing="false" text="Accept" AnchorPane.leftAnchor="201.0" />
+            <Button fx:id="btnCancel" layoutX="270.0" layoutY="515.0" mnemonicParsing="false" text="Cancel" AnchorPane.leftAnchor="270.0" />
+            <Button fx:id="btnSignature" layoutX="55.0" layoutY="515.0" mnemonicParsing="false" prefWidth="53.0" text="Sign it" />
+            <Label fx:id="lblSignature" alignment="CENTER_RIGHT" layoutX="10.0" layoutY="519.0" prefHeight="17.0" prefWidth="29.0" text="0" />
+            <ComboBox fx:id="chcLocality" layoutX="10.0" layoutY="400.0" prefHeight="25.0" prefWidth="316.0" />
          </children>
          <HBox.margin>
             <Insets />
