--- a/src/fxmls/GUI006_2MD.fxml
+++ b/src/fxmls/GUI006_2MD.fxml
@@ -13,6 +13,7 @@
             <Button fx:id="btnConfirm" layoutX="610.0" layoutY="81.0" mnemonicParsing="false" text="Confirm" />
             <TextField fx:id="txtFConfirmPass" layoutX="223.0" layoutY="69.0" prefHeight="25.0" prefWidth="254.0" />
             <Label layoutX="168.0" layoutY="33.0" prefHeight="26.0" prefWidth="463.0" text="To confirm the password change, introduce your current password:" />
+            <Button fx:id="btnCancel" layoutX="534.0" layoutY="82.0" mnemonicParsing="false" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
