--- a/src/fxmls/GUI006MD.fxml
+++ b/src/fxmls/GUI006MD.fxml
@@ -1,94 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.BorderPane?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="Incident" />
-        <Menu mnemonicParsing="false" text="File" />
-        <Menu mnemonicParsing="false" text="User Information" />
-            <Menu mnemonicParsing="false" text="LogOut" />
-      </menus>
-    </MenuBar>
-      <HBox prefHeight="386.0" prefWidth="640.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI006Controller">
+   <top>
+      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
+        <menus>
+          <Menu fx:id="mIncident" mnemonicParsing="false" text="Incidents">
+               <items>
+                  <MenuItem fx:id="miIncidents" mnemonicParsing="false" text="Incidents" />
+               </items></Menu>
+          <Menu fx:id="mTownhall" mnemonicParsing="false" text="Townhalls">
+               <items>
+                  <MenuItem fx:id="miTownhalls" mnemonicParsing="false" text="Townhalls" />
+               </items></Menu>
+            <Menu fx:id="mFile" mnemonicParsing="false" text="FTP">
+               <items>
+                  <MenuItem fx:id="miFTP" mnemonicParsing="false" text="FTP" />
+               </items></Menu>
+            <Menu fx:id="mUserInformation" mnemonicParsing="false" text="User Information">
+               <items>
+                  <MenuItem fx:id="miInformation" mnemonicParsing="false" text="User information" />
+               </items></Menu>
+            <Menu fx:id="mLogOut" mnemonicParsing="false" text="Log Out">
+               <items>
+                  <MenuItem fx:id="miLogOut" mnemonicParsing="false" text="Log Out" />
+               </items>
+            </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-            <VBox prefHeight="268.0" prefWidth="289.0">
-               <children>
-                  <Label text="Fullname:">
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Username:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Password:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <PasswordField>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </PasswordField>
-                  <Label text="Email:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Localidad:">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField disable="true" editable="false">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button mnemonicParsing="false" text="Actualizar">
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <AnchorPane prefHeight="178.0" prefWidth="201.0" />
+            <Label layoutX="375.0" layoutY="75.0" text="Fullname" />
+            <Label layoutX="375.0" layoutY="233.0" text="Email" />
+            <Label layoutX="374.0" layoutY="177.0" text="Password" />
+            <Label layoutX="375.0" layoutY="128.0" text="Username" />
+            <Label layoutX="375.0" layoutY="348.0" text="Townhall" />
+            <TextField fx:id="tfFullName" layoutX="375.0" layoutY="92.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfEmail" layoutX="375.0" layoutY="254.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfUsername" layoutX="375.0" layoutY="145.0" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="tfStreet" layoutX="375.0" layoutY="311.0" prefHeight="25.0" prefWidth="220.0" />
+            <Label layoutX="374.0" layoutY="293.0" text="Street" />
+            <Button fx:id="btnUpdate" layoutX="708.0" layoutY="379.0" mnemonicParsing="false" text="Update" />
+            <ChoiceBox fx:id="chBTownhall" layoutX="375.0" layoutY="367.0" prefHeight="25.0" prefWidth="220.0" />
+            <PasswordField fx:id="pfPassword" layoutX="375.0" layoutY="195.0" prefHeight="26.0" prefWidth="220.0" />
          </children>
-      </HBox>
-  </children>
-</VBox>
+      </AnchorPane>
+   </center>
+</BorderPane>
