--- a/src/fxmls/GUI007SDTH.fxml
+++ b/src/fxmls/GUI007SDTH.fxml
@@ -4,20 +4,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="574.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="574.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GUI007Controller">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
          <menus>
-            <Menu mnemonicParsing="false" text="Townhalls" />
-            <Menu mnemonicParsing="false" text="Townhalls users" />
-            <Menu mnemonicParsing="false" text="User information" />
-            <Menu mnemonicParsing="false" text="LogOut" />
+            <Menu fx:id="mTownhall" mnemonicParsing="false" text="Townhalls">
+               <items>
+                  <MenuItem fx:id="miTownhalls" mnemonicParsing="false" text="Townhalls" />
+               </items></Menu>
+            <Menu fx:id="mUsers" mnemonicParsing="false" text="Townhalls users">
+               <items>
+                  <MenuItem fx:id="miUsers" mnemonicParsing="false" text="Townhalls users" />
+               </items></Menu>
+            <Menu fx:id="mInformation" mnemonicParsing="false" text="User information">
+               <items>
+                  <MenuItem fx:id="miInformation" mnemonicParsing="false" text="User information" />
+               </items></Menu>
+            <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut">
+               <items>
+                  <MenuItem fx:id="miLogOut" mnemonicParsing="false" text="LogOut" />
+               </items></Menu>
          </menus>
       </MenuBar>
    </top>
@@ -30,11 +43,11 @@
                   <VBox prefHeight="104.0" prefWidth="390.0" />
                </children>
             </HBox>
-            <TableView prefHeight="591.0" prefWidth="892.0">
+            <TableView id="tableView" fx:id="tableTownhalls" prefHeight="591.0" prefWidth="892.0">
                <columns>
-                  <TableColumn maxWidth="3000.0" prefWidth="303.20006734132767" text="Name" />
-                  <TableColumn prefWidth="334.39996337890625" text="Email" />
-                  <TableColumn prefWidth="243.19998779296873" text="Telephone number" />
+                  <TableColumn fx:id="tcName" maxWidth="3000.0" prefWidth="303.20006734132767" text="Name" />
+                  <TableColumn fx:id="tcEmail" prefWidth="334.39996337890625" text="Email" />
+                  <TableColumn fx:id="tcTelephone" prefWidth="243.19998779296873" text="Telephone number" />
                </columns>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" top="5.0" />
@@ -46,19 +59,24 @@
    <right>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefWidth="120.0" text="Add new townhall">
+            <Button fx:id="btnNewTownhall" mnemonicParsing="false" prefWidth="120.0" text="Add new townhall">
                <VBox.margin>
                   <Insets left="5.0" right="5.0" top="30.0" />
                </VBox.margin>
             </Button>
-            <Button disable="true" mnemonicParsing="false" prefWidth="120.0" text="Modify townhall">
+            <Button fx:id="btnModifyTownhall" disable="true" mnemonicParsing="false" prefWidth="120.0" text="Modify townhall">
                <VBox.margin>
                   <Insets left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button disable="true" mnemonicParsing="false" prefWidth="120.0" text="Delete">
+            <Button fx:id="btnDelete" disable="true" mnemonicParsing="false" prefWidth="120.0" text="Delete">
                <VBox.margin>
                   <Insets left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="btnReport" mnemonicParsing="false" prefWidth="120.0" text="Print report">
+               <VBox.margin>
+                  <Insets left="5.0" right="5.0" top="75.0" />
                </VBox.margin>
             </Button>
          </children></VBox>
